--- a/Reservia.html
+++ b/Reservia.html
@@ -11,226 +11,239 @@
 
 	<body>
 		<div id="Page_Complete">
+			<div class="contener">
 
-			<header>
-				<div>
-					<img src="C:/Users/User/Documents/Git/Reservia/Reservia/Reservia.png" alt="Logo_Reservia">
-				</div>
-
-				<div id="Naviguation">
-					<nav>
-						<ul>
-							<li><a href="#Section2" style="color: #0065FC;">Hébergements</a></li>
-							<li><a href="#Section3">Activités</a></li>
-							<li><a href="#" style="color: #0065FC;">S'inscrire</a></li>
-						</ul>
-					</nav>
-				</div>
-			</header>
-
-			<main>
-				<section id="Section1">
-					<h1>Trouvez votre hébergement pour des vacanses de rêve</h1>
-					<p>En plein centre ville ou ou en pleine nature</p>
-
+				<header>
 					<div>
-						<form method="post" action="traitement.php" id="Form">
-							<p>
-								<label for="Localisation"><i class="fas fa-map-marker-alt"></i></label>
-								<input type="text" name="Localisation" id="Localisation" />
-								<input type="submit" name="Rechercher" value="Rechercher" id="Recherche_bouton" />
-							</p>
-						</form>
+						<img src="C:/Users/User/Documents/Git/Reservia/Reservia/Reservia.png" alt="Logo_Reservia">
 					</div>
 
-					<div id="Filtres">
-						<p>Filtres</p>
-
-						<div class="Filter">
-							<i class="fas fa-money-bill-wave"></i>
-							<div class="filter_text">
-								Economique
-							</div>	
-						</div>
-
-						<div class="Filter">
-							<i class="fas fa-child"></i>
-							<div class="filter_text">
-								Familial
-							</div>	
-						</div>
-
-						<div class="Filter">
-							<i class="fas fa-heart"></i>
-							<div class="filter_text">
-								Romantique
-							</div>	
-						</div>
-
-						<div class="Filter">
-							<i class="fas fa-dog"></i>
-							<div class="filter_text">
-								Animaux autorisés
-							</div>	
-						</div>
+					<div id="Naviguation">
+						<nav>
+							<ul>
+								<li><a href="#Section2" style="color: #0065FC;">Hébergements</a></li>
+								<li><a href="#Section3">Activités</a></li>
+								<li><a href="#" style="color: #0065FC;">S'inscrire</a></li>
+							</ul>
+						</nav>
 					</div>
+				</header>
 
-					<div id="Logement">
-						<i class="fas fa-info"></i><p>Plus de 500 logements sont disponibles dans cette ville</p>
-					</div>
-				</section>
-
-				<section id="Section2">
-					<h2>Hébergements à Marseille</h2>
-
-					<div id="Hebergement1">
-						<div class="photo">
-							<a href="#"><figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo1hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Auberge la Cannebière</span><br /><span class="span2">Nuit à partir de 25€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
-							</figure></a>
-						</div>
-
-						<div class="photo">
-							<a href="#"><figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo2hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Hôtel du port</span><br /><span class="span2">Nuit à partir de 52€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
-							</figure></a>
-						</div>
-
-						<div class="photo">
-							<a href="#"><figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo3hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Hôtel les mouettes</span><br /><span class="span2">Nuit à partir de 76€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
-							</figure></a>
-						</div>
-					</div>
-
-					<div id="Hebergement2">
-						<div class="photo">
-							<a href="#"><figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo4hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Hôtel de la mer</span><br /><span class="span2">Nuit à partir de 46€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
-							</figure></a>
-						</div>
-
-						<div class="photo">
-							<a href="#"><figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo5hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Auberge le panier</span><br /><span class="span2">Nuit à partir de 23€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
-							</figure></a>
-						</div>
-
-						<div class="photo">
-							<a href="#"><figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo6hebergement.jpg" alt="#" />
-								<figcaption><span class="span">Hôtel chez Amina</span><br /><span class="span2">Nuit à partir de 96€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
-							</figure></a>
-						</div>
-					</div>
-					<p>Afficher plus</p>
-				</section>
-
-					<aside id="Aside">
-						<h2>Les plus populaires<i style="margin-left: 60px;" class="fas fa-chart-line"></i></h2>
-
-						<div class="aside">
-							<a href="#"><figure class="flex">
-									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" />
-									<figcaption><span class="span">Hôtel le soleil du matin</span><br /><span class="span2">Nuit à partir de 128€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
-							</figure></a>
-						</div>
-
-						<div class="aside">
-							<a href="#"><figure class="flex">
-									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" />
-									<figcaption><span class="span">Au coeur de l'eau Chambres d'hôtes</span><br /><span class="span2">Nuit à partir de 71€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
-							</figure></a>
-						</div>
-
-						<div class="aside">
-							<a href="#"><figure class="flex">
-									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" />
-									<figcaption><span class="span">Hôtel Tout bleu et Blanc</span><br /><span class="span2">Nuit à partir de 68€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
-							</figure></a>
-						</div>
-					</aside>
-
-				<section id="Section3">
-					<h2>Activités à Marseille</h2>
-
-					<div style="margin-left: -25px;" id="Conteneur">
-						<div class="Activite">
-							<a href="#"><figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite1.jpg" alt="#" />
-								<figcaption><span class="span">Vieux Port</span></figcaption>
-							</figure></a>
-						</div>
+				<main>
+					<section id="Section1">
+						<h1>Trouvez votre hébergement pour des vacanses de rêve</h1>
+						<p>En plein centre ville ou ou en pleine nature</p>
 
 						<div>
+							<form method="post" action="traitement.php" id="Form">
+								<p>
+									<label for="Localisation"><i class="fas fa-map-marker-alt"></i></label>
+									<input type="text" name="Localisation" id="Localisation" />
+									<input type="submit" name="Rechercher" value="Rechercher" id="Recherche_bouton" />
+								</p>
+							</form>
+						</div>
+
+						<div id="Filtres">
+							<p>Filtres</p>
+
+							<div class="Filter">
+								<i class="fas fa-money-bill-wave"></i>
+								<div class="filter_text">
+									Economique
+								</div>	
+							</div>
+
+							<div class="Filter">
+								<i class="fas fa-child"></i>
+								<div class="filter_text">
+									Familial
+								</div>	
+							</div>
+
+							<div class="Filter">
+								<i class="fas fa-heart"></i>
+								<div class="filter_text">
+									Romantique
+								</div>	
+							</div>
+
+							<div class="Filter">
+								<i class="fas fa-dog"></i>
+								<div class="filter_text">
+									Animaux autorisés
+								</div>	
+							</div>
+						</div>
+
+						<div id="Logement">
+							<i class="fas fa-info"></i><p>Plus de 500 logements sont disponibles dans cette ville</p>
+						</div>
+					</section>
+
+					<section id="Section2">
+						<h2>Hébergements à Marseille</h2>
+
+						<div id="Hebergement1">
+							<div class="photo">
+								<a href="#"><figure>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo1hebergement.jpg" alt="#" />
+									<figcaption><span class="span">Auberge la Cannebière</span><br /><span class="span2">Nuit à partir de 25€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								</figure></a>
+							</div>
+
+							<div class="photo">
+								<a href="#"><figure>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo2hebergement.jpg" alt="#" />
+									<figcaption><span class="span">Hôtel du port</span><br /><span class="span2">Nuit à partir de 52€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								</figure></a>
+							</div>
+
+							<div class="photo">
+								<a href="#"><figure>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo3hebergement.jpg" alt="#" />
+									<figcaption><span class="span">Hôtel les mouettes</span><br /><span class="span2">Nuit à partir de 76€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								</figure></a>
+							</div>
+						</div>
+
+						<div id="Hebergement2">
+							<div class="photo">
+								<a href="#"><figure>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo4hebergement.jpg" alt="#" />
+									<figcaption><span class="span">Hôtel de la mer</span><br /><span class="span2">Nuit à partir de 46€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								</figure></a>
+							</div>
+
+							<div class="photo">
+								<a href="#"><figure>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo5hebergement.jpg" alt="#" />
+									<figcaption><span class="span">Auberge le panier</span><br /><span class="span2">Nuit à partir de 23€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								</figure></a>
+							</div>
+
+							<div class="photo">
+								<a href="#"><figure>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/photo6hebergement.jpg" alt="#" />
+									<figcaption><span class="span">Hôtel chez Amina</span><br /><span class="span2">Nuit à partir de 96€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								</figure></a>
+							</div>
+						</div>
+						<p>Afficher plus</p>
+					</section>
+
+						<aside id="Aside">
+							<h2>Les plus populaires<i style="margin-left: 60px;" class="fas fa-chart-line"></i></h2>
+
+							<div class="aside">
+								<a href="#"><figure class="flex">
+										<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire1.jpg" alt="#" />
+										<figcaption><span class="span">Hôtel le soleil du matin</span><br /><span class="span2">Nuit à partir de 128€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></figcaption>
+								</figure></a>
+							</div>
+
+							<div class="aside">
+								<a href="#"><figure class="flex">
+										<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire2.jpg" alt="#" />
+										<figcaption><span class="span">Au coeur de l'eau Chambres d'hôtes</span><br /><span class="span2">Nuit à partir de 71€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								</figure></a>
+							</div>
+
+							<div class="aside">
+								<a href="#"><figure class="flex">
+										<img src="C:/Users/User/Documents/Git/Reservia/Reservia/populaire3.jpg" alt="#" />
+										<figcaption><span class="span">Hôtel Tout bleu et Blanc</span><br /><span class="span2">Nuit à partir de 68€</span><br /><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i style="color: #cfcfcf" class="fas fa-star"></i></figcaption>
+								</figure></a>
+							</div>
+						</aside>
+
+
+					<section id="Section3">
+						<h2>Activités à Marseille</h2>
+
+						<div style="margin-left: -25px;" id="Conteneur">
 							<div class="Activite">
 								<a href="#"><figure>
-									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite2.jpg" alt="#" />
-									<figcaption><span class="span">Fort de Pornègues</span></figcaption>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite1.jpg" alt="#" />
+									<figcaption><span class="span">Vieux Port</span></figcaption>
 								</figure></a>
 							</div>
 
-							<div style="margin-top: 23px;" class="Activite">
-								<a href="#"><figure>
-									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite3.jpg" alt="#" />
-									<figcaption><span class="span">Iles de Frioul</span></figcaption>
-								</figure></a>
+							<div>
+								<div class="Activite">
+									<a href="#"><figure>
+										<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite2.jpg" alt="#" />
+										<figcaption><span class="span">Fort de Pornègues</span></figcaption>
+									</figure></a>
+								</div>
+
+								<div style="margin-top: 23px;" class="Activite">
+									<a href="#"><figure>
+										<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite3.jpg" alt="#" />
+										<figcaption><span class="span">Iles de Frioul</span></figcaption>
+									</figure></a>
+								</div>
 							</div>
-						</div>
 
-						<div class="Activite">
-							<a href="#"><figure>
-								<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite4.jpg" alt="#" />
-								<figcaption><span class="span">Parc National des Calanques</span></figcaption>
-							</figure></a>
-						</div>
-
-						<div>
 							<div class="Activite">
 								<a href="#"><figure>
-									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite5.jpg" alt="#" />
-									<figcaption><span class="span">Notre-Dame-de-la-Garde</span></figcaption>
+									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite4.jpg" alt="#" />
+									<figcaption><span class="span">Parc National des Calanques</span></figcaption>
 								</figure></a>
 							</div>
 
-							<div style="margin-top: 59.5px;" class="Activite">
-								<a href="#"><figure>
-									<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite6.jpg" alt="#" />
-									<figcaption><span class="span">Parc Longchamp</span></figcaption>
-								</figure></a>
+							<div>
+								<div class="Activite">
+									<a href="#"><figure>
+										<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite5.jpg" alt="#" />
+										<figcaption><span class="span">Notre-Dame-de-la-Garde</span></figcaption>
+									</figure></a>
+								</div>
+
+								<div style="margin-top: 59.5px;" class="Activite">
+									<a href="#"><figure>
+										<img src="C:/Users/User/Documents/Git/Reservia/Reservia/activite6.jpg" alt="#" />
+										<figcaption><span class="span">Parc Longchamp</span></figcaption>
+									</figure></a>
+								</div>
+							</div>
+						</div>
+					</section>
+				</main>
+
+				
+
+				<footer>
+					<div id="footer">
+						<div class="row">
+     						<div class="col-12 col-lg-4">
+								<div id="A_propos">
+									<h3>A propos</h3>
+									<p>Fontionnement du site</p>
+									<p>Conditions générale de ventes</p>
+									<p>Données et confidentialité</p>
+								</div>
+							</div>
+
+     						<div class="col-12 col-lg-4">
+								<div id="Nos_Hebergements">
+									<h3>Nos hebergements</h3>
+									<p>Charte qualité</p>
+									<p>Soumettre votre hôtel</p>
+								</div>
+							</div>
+
+							<div class="col-12 col-lg-4">
+								<div id="Assistance">
+									<h3>Assistance</h3>
+									<p>Centre d'aide</p>
+									<p>Nous contacter</p>
+								</div>
 							</div>
 						</div>
 					</div>
-				</section>
-			</main>
-
-			<footer>
-				<div id="footer">
-					<div id="A_propos">
-						<h3>A propos</h3>
-						<p>Fontionnement du site</p>
-						<p>Conditions générale de ventes</p>
-						<p>Données et confidentialité</p>
-					</div>
-
-					<div id="Nos_Hebergements">
-						<h3>Nos hebergements</h3>
-						<p>Charte qualité</p>
-						<p>Soumettre votre hôtel</p>
-					</div>
-
-					<div id="Assistance">
-						<h3>Assistance</h3>
-						<p>Centre d'aide</p>
-						<p>Nous contacter</p>
-					</div>
-				</div>
-			</footer>
+				</footer>
+			</div>
 		</div>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	</body>
